[Win] Fix MSVC's treating __attribute__((warn_unused_result)) https://bugs.webkit.org/show_bug.cgi?id=182479

Patch by Yousuke Kimoto <yousuke.kimoto@sony.com> on 2018-02-20
Reviewed by Darin Adler.

Since MSVC doesn't understand "__attribute__", "_Check_return_" is used instead.
If clang and VisualStudio 2017 are used, a macro with "__attriute__" will be chosen.

* UIProcess/API/cpp/WKRetainPtr.h:

Canonical link: https://commits.webkit.org/198711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228751 268f45cc-cd09-0410-ab3c-d52691b4dbfc